@@ -2,18 +2,22 @@ require 'moosex'
 require 'moosex/attribute'
 require 'moosex/attribute/modifiers'
 
-module MyPlugin
-  def self.included(k)
-    MooseX::Attribute.register_new_parameter(:bar, MyPlugin::Y::Bar.new)
-  end
-
-  module Y
-    class Bar
-      def process(options, attr_symbol)
-        !! options.delete(:bar)
-      end
+module MooseX
+  module AttributeModifiers
+    module ThirdParty
+      class Bar
+        def process(options, attr_symbol)
+         !! options.delete(:bar)
+        end
+     end
     end
   end  
+end
+
+module MyPlugin
+  def self.included(x)
+    x.meta.add_plugin(:bar)
+  end
 end
 
 module TestAddAttribute
@@ -25,14 +29,46 @@ module TestAddAttribute
       bar: true
     }
   end
+
+  class B < A
+
+    has :foo2, {
+      bar: true
+    }
+  end
+
+  class C
+    include MooseX.init(meta: true)
+    
+    has :foo, {
+      bar: true
+    }
+  end    
 end
 
 describe TestAddAttribute do
-  it "should support the new attribute" do
+  it "A should support the new attribute" do
     TestAddAttribute::A.new(foo: 1)
   end
 
-  it "should support the new attribute in meta" do
+  it "A should support the new attribute in meta" do
     TestAddAttribute::A.meta.attrs[:foo].attribute_map[:bar].should be_true
-  end  
+  end 
+
+  it "B should support the new attribute" do
+    TestAddAttribute::B.new(foo: 1, foo2: 2)
+  end
+
+  it "B should support the new attribute in meta" do
+    TestAddAttribute::B.meta.attrs[:foo].attribute_map[:bar].should be_true
+    TestAddAttribute::B.meta.attrs[:foo2].attribute_map[:bar].should be_true   
+  end    
+
+  it "C should support the new attribute" do
+    TestAddAttribute::C.new(foo: 1)
+  end
+
+  it "C should support the new attribute in meta" do
+    TestAddAttribute::C.meta.attrs[:foo].attribute_map[:bar].should be_nil
+  end       
 end
